# clip.cpp

./: CMakeLists.txt  README.md  clip.hpp  model_loader.hpp  op.hpp  pipeline.hpp  utils.hpp
clip.cpp/: README.md  common.hpp  format-code.sh  main.cpp  model_config.hpp
clip.cpp/convert_model/: convert.py
clip.cpp/tokenizer/: tokenizer.hpp
example/: label_chinese.txt  label_english.txt
thirty_party/ggml/src/: ggml.c
tokenizer/: bert_tokenizer.hpp
